--- a/po/fi/kiconedit.po
+++ b/po/fi/kiconedit.po
@@ -42,9 +42,8 @@ msgid "Select All"
 msgstr "Valitse Kaikki"
 
 #: kiconedit.cpp:385
-#, fuzzy
 msgid "New &Window"
-msgstr "Uusi ikkuna"
+msgstr "Uusi &ikkuna"
 
 #: kiconedit.cpp:390
 msgid "&New..."
@@ -431,7 +430,6 @@ msgstr ""
 "(Vihje: Voit tehdä suorakaiteen ja ympyrän muotoisia valintoja)"
 
 #: kiconedit.cpp:830
-#, fuzzy
 msgid ""
 "Paste\n"
 "\n"
@@ -449,6 +447,9 @@ msgstr ""
 "\n"
 "Jos leikepöydän sisältö on suurempi kuin kuvake voit liittää sen uuteen "
 "ikkunaan."
+"\n"
+"(Vinkki: Valitse \"Liitä läpinäkyvät pisteet\" asetusfialogissa jos "
+"haluat liittää myös läpinäkyvät.)"
 
 #: kiconedit.cpp:837
 msgid ""
@@ -695,21 +696,19 @@ msgstr "Tyhjää kuvaa ladattaessa tapahtui virhe.\n"
 
 #: kicongrid.cpp:789
 msgid "All selected"
-msgstr ""
+msgstr "Kaikki valittu"
 
 #: kicongrid.cpp:800
 msgid "Cleared"
 msgstr "Tyhjennetty"
 
 #: kicongrid.cpp:842
-#, fuzzy
 msgid "Selected area cutted"
-msgstr "Valitse alue"
+msgstr "Valittu alue leikattu"
 
 #: kicongrid.cpp:845
-#, fuzzy
 msgid "Selected area copied"
-msgstr "Valitse alue"
+msgstr "Valittu alue kopioitu"
 
 #: kicongrid.cpp:923
 msgid ""
@@ -946,32 +945,32 @@ msgid "Example"
 msgstr "Esimerkki"
 
 #: kiconconfig.cpp:398
-#, fuzzy
 msgid "Main Toolbar"
-msgstr "Pienoiskansio"
+msgstr "Päätyökalurivi"
 
 #: kiconconfig.cpp:401
-#, fuzzy
 msgid "Drawing tools"
-msgstr "Näytä t&yökalut"
+msgstr "Piirtotyökalut"
 
 #: kiconconfig.cpp:405
 msgid ""
 "Note: Other settings of the toolbars can be reached\n"
 "from the toolbar \"handle\" or from the \"Options\" menu"
 msgstr ""
+"Huomaa: Muut työkalupalkin asetukset löytyvät työkalupalkin\n"
+"\"kiinikkeestä\" tai \"Asetukset\" valikosta"
 
 #: kiconconfig.cpp:424 kiconconfig.cpp:437
 msgid "Show Icon"
-msgstr ""
+msgstr "Näytä ikoni"
 
 #: kiconconfig.cpp:429 kiconconfig.cpp:442
 msgid "Show Icon and Text"
-msgstr ""
+msgstr "Näytä ikoni ja teksti"
 
 #: kiconconfig.cpp:433 kiconconfig.cpp:446
 msgid "Show Text"
-msgstr ""
+msgstr "Näytä teksti"
 
 #: kiconconfig.cpp:504
 msgid "Paste mode"
@@ -1006,9 +1005,8 @@ msgid "Configure background"
 msgstr "Aseta taustaa"
 
 #: kiconconfig.cpp:629
-#, fuzzy
 msgid "Toolbars"
-msgstr "&Työkalut"
+msgstr "Työkalupalkit"
 
 #: kiconconfig.cpp:641
 msgid "Icon grid"
