--- a/po/hr/kdvi.po
+++ b/po/hr/kdvi.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Copyright (C) 1998 Free Software Foundation, Inc.
+# Stjepan Zlodi <szlodi@public.srce.hr>, 1998
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1998-10-13 13:31+0200\n"
 "PO-Revision-Date: 1998-03-15 20:00-0500\n"
 "Last-Translator: Stjepan Zlodi <szlodi@public.srce.hr> \n"
-"Language-Team: Croatian\n"
+"Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: iso-8859-2\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
 #: kdvi.cpp:516
@@ -84,12 +83,11 @@ msgstr "Obnovi stranicu"
 
 #: kdvi.cpp:117
 msgid "Preferences ..."
-msgstr "Odrednice ..."
+msgstr "Postavke ..."
 
 #: kdvi.cpp:175
-#, fuzzy
 msgid "&New"
-msgstr "&Slijedeæa"
+msgstr "&Nova"
 
 #: kdvi.cpp:176
 msgid "&Open ..."
@@ -684,15 +682,3 @@ msgstr "n-gore"
 #: printSetupData.cpp:137
 msgid "Printing method"
 msgstr "Naèin ispisa"
-
-#~ msgid "Appearance"
-#~ msgstr "Izgled"
-
-#~ msgid "Fonts"
-#~ msgstr "Pisma"
-
-#~ msgid "Print"
-#~ msgstr "Ispis"
-
-#~ msgid "&Remove"
-#~ msgstr "&Makni"
