--- a/po/hr/kghostview.po
+++ b/po/hr/kghostview.po
@@ -9,10 +9,10 @@ msgstr ""
 "POT-Creation-Date: 1998-10-13 13:31+0200\n"
 "PO-Revision-Date: 1998-03-15 20:00-0500\n"
 "Last-Translator: Vladimir Vuksan <vuksan@veus.hr>\n"
-"Language-Team: Croatian\n"
+"Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: iso-8859-2\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -39,9 +39,8 @@ msgid "Remove page marks"
 msgstr "Ukloni oznake stranice"
 
 #: marklist.cpp:367
-#, fuzzy
 msgid "Page"
-msgstr "St&ranica"
+msgstr "Stranica"
 
 #: copyright.cpp:27
 msgid "Copyright"
@@ -282,7 +281,7 @@ msgid ""
 " [filename] [siwtches]\n"
 "\n"
 msgstr ""
-"[datoteka] [switches]\n"
+"[datoteka] [opcije]\n"
 "\n"
 
 #: main.cpp:28
@@ -359,11 +358,11 @@ msgstr "Podesi interpreter"
 
 #: kghostview.cpp:444
 msgid "New"
-msgstr ""
+msgstr "Nova"
 
 #: kghostview.cpp:498
 msgid "&New"
-msgstr ""
+msgstr "&Nova"
 
 #: kghostview.cpp:500
 msgid "&Open ..."
@@ -502,6 +501,16 @@ msgid ""
 "\n"
 "See http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 msgstr ""
+" - Postscript preglednik za\n"
+"the K Desktop Environment.\n"
+"\n"
+"Pisan od strane Mark Donohoea <donohoe@kde.org>, baziran na radu\n"
+"Tima Theisena.\n"
+"\n"
+"Ukljuèuje kod iz Johanes Plassovog gva koji dodaje podr¹ku za komprimirane\n"
+"PS datoteke te PDF datoteke.\n"
+"\n"
+"Posjetite http://wwwthep.physik.uni-mainz.de/~plass/gv za detalje"
 
 #: kghostview.cpp:665
 msgid "New window ..."
@@ -638,6 +647,7 @@ msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
 "to be taken into account."
 msgstr ""
+"Namjestite okoli¹ne varijable (npr. PRINTER ili LPDEST) za ime pisaèa." 
 
 #: kghostview.cpp:1654
 #, c-format
@@ -689,87 +699,3 @@ msgstr "Sek.%d "
 #: zoom.cpp:46
 msgid "&Magnification"
 msgstr "&Uveæanje"
-
-#~ msgid "&Defaults"
-#~ msgstr "&Uobièajeno"
-
-#~ msgid "CTRL+O"
-#~ msgstr "CTRL+O"
-
-#~ msgid "CTRL+N"
-#~ msgstr "CTRL+N"
-
-#~ msgid "CTRL+W"
-#~ msgstr "CTRL+W"
-
-#~ msgid "CTRL+S"
-#~ msgstr "CTRL+S"
-
-#~ msgid "CTRL+P"
-#~ msgstr "CTRL+P"
-
-#~ msgid "CTRL+Q"
-#~ msgstr "CTRL+Q"
-
-#~ msgid "CTRL+X"
-#~ msgstr "CTRL+X"
-
-#~ msgid "CTRL+C"
-#~ msgstr "CTRL+C"
-
-#~ msgid "CTRL+V"
-#~ msgstr "CTRL+V"
-
-#~ msgid "CTRL+Z"
-#~ msgstr "CTRL+Z"
-
-#~ msgid "CTRL+F"
-#~ msgstr "CTRL+F"
-
-#~ msgid "CTRL+R"
-#~ msgstr "CTRL+R"
-
-#~ msgid "Insert"
-#~ msgstr "Insert"
-
-#~ msgid "CTRL+Insert"
-#~ msgstr "CTRL+Insert"
-
-#~ msgid "CTRL+Home"
-#~ msgstr "CTRL+Home"
-
-#~ msgid "End"
-#~ msgstr "End"
-
-#~ msgid "CTRL+End"
-#~ msgstr "CTRL+End"
-
-#~ msgid "Prior"
-#~ msgstr "Prija¹nji"
-
-#~ msgid "Next"
-#~ msgstr "Slijedeæi"
-
-#~ msgid "F1"
-#~ msgstr "F1"
-
-#~ msgid "Zoom"
-#~ msgstr "Uveæaj/Umanji"
-
-#~ msgid "Current key"
-#~ msgstr "Trenutni kljuè"
-
-#~ msgid "&Action"
-#~ msgstr "&Akcija"
-
-#~ msgid "&No key"
-#~ msgstr "Be&z kljuèa"
-
-#~ msgid "&Default key"
-#~ msgstr "&Uobièajeni kljuè"
-
-#~ msgid "&Custom key"
-#~ msgstr "&Birani kljuè"
-
-#~ msgid "Print"
-#~ msgstr "Ispis"
