--- a/po/hr/kpaint.po
+++ b/po/hr/kpaint.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Copyright (C) 1998 Free Software Foundation, Inc.
+# Vladimir Vuksan <vuksan@veus.hr>, 1998
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-13 13:31+0200\n"
-"PO-Revision-Date: 1998-04-29 20:00-0500\n"
+"Project-Id-Version: kdegraphics\n"
+"POT-Creation-Date: 1998-05-13 12:05+0200\n"
+"PO-Revision-Date: 1998-10-15 15:00-0500\n"
 "Last-Translator: Vladimir Vuksan <vuksan@veus.hr>\n"
 "Language-Team: Croatian\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: iso-8859-2\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Transfer-Encoding: 8bit\n"       
 
 #: app.cpp:45
 msgid ""
@@ -269,7 +268,7 @@ msgstr "Visina slike:"
 
 #: infodialog.cpp:94 palettedialog.cpp:14
 msgid "Dismiss"
-msgstr ""
+msgstr "Otka¾i"
 
 #: palette.cpp:100
 msgid "Edit Colour"
@@ -410,6 +409,3 @@ msgstr "24 (Istinska Boja)"
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "Zaobljeni èetverokut"
-
-#~ msgid "Continue"
-#~ msgstr "Nastavi"
