Fixed KIMGIO_LIBS (that was just plain silly)

--- a/configure.in.1
+++ b/configure.in.1
@@ -45,7 +45,7 @@ dnl Image readers/writers
 AC_FIND_GIF
 AC_FIND_JPEG
 AC_FIND_TIFF
-KIMGIO_LIBS="\$(LIB_JPEG) \$(LIB_TIFF)"
+KIMGIO_LIBS="\$(LIBJPEG) \$(LIBTIFF)"
 AC_SUBST(KIMGIO_LIBS)
 
 # AC_CHECK_LIB(png, main, 
